tests/wast/spec/proposals/gc/ref_eq.wast
(module
  (type $st (struct))
  (type $st' (struct (field i32)))
  (type $at (array i8))

  (table 20 (ref null eq))

  (func (export "init")
    (table.set (i32.const 0) (ref.null eq))
    (table.set (i32.const 1) (ref.null i31))
    (table.set (i32.const 2) (i31.new (i32.const 7)))
    (table.set (i32.const 3) (i31.new (i32.const 7)))
    (table.set (i32.const 4) (i31.new (i32.const 8)))
    (table.set (i32.const 5) (struct.new_default $st (rtt.canon $st)))
    (table.set (i32.const 6) (struct.new_default $st (rtt.canon $st)))
    (table.set (i32.const 7) (array.new_default $at (i32.const 0) (rtt.canon $at)))
    (table.set (i32.const 8) (array.new_default $at (i32.const 0) (rtt.canon $at)))
    (table.set (i32.const 9) (rtt.canon $st))
    (table.set (i32.const 10) (rtt.canon $st))
    (table.set (i32.const 11) (rtt.canon $at))
    (table.set (i32.const 12) (rtt.sub $st (rtt.canon $st)))
    (table.set (i32.const 13) (rtt.sub $st (rtt.canon $st)))
    (table.set (i32.const 14) (rtt.sub $st' (rtt.canon $st)))
    (table.set (i32.const 15) (rtt.sub $st' (rtt.canon $st)))
  )

  (func (export "eq") (param $i i32) (param $j i32) (result i32)
    (ref.eq (table.get (local.get $i)) (table.get (local.get $j)))
  )
)

(invoke "init")

(assert_return (invoke "eq" (i32.const 0) (i32.const 0)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 0) (i32.const 1)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 0) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 0) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 0) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 0) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 0) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 0) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 0) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 0) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 0) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 0) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 0) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 0) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 0) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 0) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 1) (i32.const 0)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 1) (i32.const 1)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 1) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 1) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 1) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 1) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 1) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 1) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 1) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 1) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 1) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 1) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 1) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 1) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 1) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 1) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 2) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 2) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 2) (i32.const 2)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 2) (i32.const 3)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 2) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 2) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 2) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 2) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 2) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 2) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 2) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 2) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 2) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 2) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 2) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 2) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 3) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 3) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 3) (i32.const 2)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 3) (i32.const 3)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 3) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 3) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 3) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 3) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 3) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 3) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 3) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 3) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 3) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 3) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 3) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 3) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 4) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 4)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 4) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 4) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 5) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 5)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 5) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 5) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 6) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 6)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 6) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 6) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 7) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 7)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 7) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 7) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 8) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 8)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 8) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 8) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 9) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 9) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 9) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 9) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 9) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 9) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 9) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 9) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 9) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 9) (i32.const 9)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 9) (i32.const 10)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 9) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 9) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 9) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 9) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 9) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 10) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 10) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 10) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 10) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 10) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 10) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 10) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 10) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 10) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 10) (i32.const 9)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 10) (i32.const 10)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 10) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 10) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 10) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 10) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 10) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 11) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 11)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 11) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 11) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 12) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 12) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 12) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 12) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 12) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 12) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 12) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 12) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 12) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 12) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 12) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 12) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 12) (i32.const 12)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 12) (i32.const 13)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 12) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 12) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 13) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 13) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 13) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 13) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 13) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 13) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 13) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 13) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 13) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 13) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 13) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 13) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 13) (i32.const 12)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 13) (i32.const 13)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 13) (i32.const 14)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 13) (i32.const 15)) (i32.const 0))

(assert_return (invoke "eq" (i32.const 14) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 14) (i32.const 14)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 14) (i32.const 15)) (i32.const 1))

(assert_return (invoke "eq" (i32.const 15) (i32.const 0)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 1)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 2)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 3)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 4)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 5)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 6)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 7)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 8)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 9)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 10)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 11)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 12)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 13)) (i32.const 0))
(assert_return (invoke "eq" (i32.const 15) (i32.const 14)) (i32.const 1))
(assert_return (invoke "eq" (i32.const 15) (i32.const 15)) (i32.const 1))

(assert_invalid
  (module
    (func (export "eq") (param $r (ref any)) (result i32)
      (ref.eq (local.get $r) (local.get $r))
    )
  )
  "type mismatch"
)
(assert_invalid
  (module
    (func (export "eq") (param $r (ref null any)) (result i32)
      (ref.eq (local.get $r) (local.get $r))
    )
  )
  "type mismatch"
)
(assert_invalid
  (module
    (func (export "eq") (param $r (ref func)) (result i32)
      (ref.eq (local.get $r) (local.get $r))
    )
  )
  "type mismatch"
)
(assert_invalid
  (module
    (func (export "eq") (param $r (ref null func)) (result i32)
      (ref.eq (local.get $r) (local.get $r))
    )
  )
  "type mismatch"
)
(assert_invalid
  (module
    (func (export "eq") (param $r (ref extern)) (result i32)
      (ref.eq (local.get $r) (local.get $r))
    )
  )
  "type mismatch"
)
(assert_invalid
  (module
    (func (export "eq") (param $r (ref null extern)) (result i32)
      (ref.eq (local.get $r) (local.get $r))
    )
  )
  "type mismatch"
)
